fixes lock button to look better in both light and dark mode

--- a/src/components/ParentForm/ParentForm.scss
+++ b/src/components/ParentForm/ParentForm.scss
@@ -34,9 +34,6 @@
     --opacity: 1;
     --border-width: 2px;
   }
-  .locked {
-    --background: rgba(128, 128, 128, 0.479);
-  }
   .add-button {
     width: 100%;
   }
@@ -58,6 +55,9 @@
     --border-color: white;
     --ripple-color: #F43E5C;
   }
+  .locked {
+    --background: rgba(128, 128, 128, 0.479);
+  }
 }
 
 .custom-input {
@@ -74,7 +74,7 @@
   bottom: 1rem;
   background-color: #f95838c0;
   border-radius: 50%;
-  border: solid white 2px;
+  border: solid rgba(130, 130, 130, 0.6) 2px;
   color: white;
   padding: .3rem;
 }
@@ -88,6 +88,6 @@
   left: .45rem;
   bottom: 1rem;
   border-radius: 50%;
-  border: solid rgba(0, 0, 0, 0.438) 2px;
+  border: solid rgba(130, 130, 130, 0.50) 2px;
   padding: .3rem;
 }
